v2.0/base/aimp-cloud/aimp-report/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aimp-report
  name: aimp-report
  namespace: aimp-cloud
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: aimp-report
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      creationTimestamp: null
      labels:
        app: aimp-report
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: aimprole.shaiic.com
                    operator: In
                    values:
                      - controller
      containers:
#      - args:
#        - /app/server
#        - -conf
#        - /data/conf
#        command:
#        - /bin/sh
#        - -c
      - image: cxyacr.azurecr.cn/aimp-cloud/aimp-report:275
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - /bin/sleep 30
#        livenessProbe:
#          failureThreshold: 3
#          httpGet:
#            path: /actuator/health/liveness
#            port: 8000
#            scheme: HTTP
#          initialDelaySeconds: 60
#          periodSeconds: 15
#          successThreshold: 1
#          timeoutSeconds: 1
        name: aimp-report
        ports:
        - containerPort: 8000
          name: http
          protocol: TCP
#        readinessProbe:
#          failureThreshold: 3
#          httpGet:
#            path: /actuator/health/readiness
#            port: 8000
#            scheme: HTTP
#          periodSeconds: 15
#          successThreshold: 1
#          timeoutSeconds: 1
        resources:
          limits:
            cpu: "2"
            memory: 4Gi
          requests:
            cpu: 100m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /log
          name: ms-log
        - mountPath: /elastic/apm/agent
          name: elastic-apm-agent
      dnsPolicy: ClusterFirstWithHostNet
      imagePullSecrets:
      - name: cxycred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: { }
      serviceAccount: aimp-report-sa
      serviceAccountName: aimp-report-sa
      terminationGracePeriodSeconds: 30
      volumes:
      - hostPath:
          path: /data/logs/ms/aimp-report
          type: ""
        name: ms-log
      - emptyDir: { }
        name: elastic-apm-agent
